<resources>
    <string name="app_name">RockPaperScissors</string>
    <string name="start">Start game</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
    <string name="score">Score</string>
    <string name="end">End Game</string>
    <string name="human">Human</string>
    <string name="cpu">Computer</string>
    <string name="again">Play again</string>
    <string name="starta">Start</string>
    <string name="agree">I agree to play the game without getting nervous.:)</string>
</resources>
